[gd_scene load_steps=17 format=3 uid="uid://bbbha5rn0kflr"]

[ext_resource type="Script" uid="uid://do0scnp22kly2" path="res://Level/level_manager.gd" id="1_vx8ih"]
[ext_resource type="Texture2D" uid="uid://nygc5koouovv" path="res://Shop/UI/Background.svg" id="2_ugh17"]
[ext_resource type="Texture2D" uid="uid://4o5bt3kc2rjk" path="res://Shop/UI/FruitSymbol.svg" id="3_t80w2"]
[ext_resource type="Texture2D" uid="uid://dsql3t48snojb" path="res://Level/LevelUI/ActiveItemSlot.svg" id="6_8a2b0"]
[ext_resource type="PackedScene" uid="uid://bnn1xmc2b43mm" path="res://Level/LevelUI/time_meter.tscn" id="7_8a2b0"]
[ext_resource type="Script" uid="uid://cle2566xpcd0s" path="res://Level/LevelUI/active_item_slot.tres.gd" id="7_ecu0b"]
[ext_resource type="FontFile" uid="uid://c2j1n75n5m4wk" path="res://Fonts/BRLNSDB.TTF" id="8_jjxhf"]
[ext_resource type="AudioStream" uid="uid://qn1q6ig0svqg" path="res://Snake/Sfx/HitAudio.wav" id="9_t2u7g"]
[ext_resource type="PackedScene" uid="uid://bc4sb6dmfgooa" path="res://Level/LevelUI/speed_boost_bar.tscn" id="10_8hqpc"]
[ext_resource type="AudioStream" uid="uid://cydw70e7incnh" path="res://Snake/Sfx/EatFruitAudio.wav" id="10_vx8ih"]
[ext_resource type="Texture2D" uid="uid://7lqpfe7tlnsc" path="res://Shop/UI/LeftClickSymbol.png" id="11_uqeto"]
[ext_resource type="Texture2D" uid="uid://c42oo7o7hd0gw" path="res://Shop/UI/SpacebarSymbol.png" id="12_luomk"]
[ext_resource type="Texture2D" uid="uid://dtdvwr7u18ho7" path="res://Shop/UI/ShiftSymbol.png" id="13_k8npl"]
[ext_resource type="Texture2D" uid="uid://wtfvj0raxdyk" path="res://Shop/UI/DashSymbol.png" id="14_am3y4"]
[ext_resource type="Texture2D" uid="uid://6vyw6l1ic63v" path="res://Shop/UI/WasdSymbol.png" id="15_l5n2q"]
[ext_resource type="Texture2D" uid="uid://cwl6vyqop8det" path="res://Shop/UI/ArrowSymbol.png" id="16_cv6tn"]

[node name="Level" type="Node2D"]
z_index = 40
z_as_relative = false
script = ExtResource("1_vx8ih")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_ugh17")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-60, 0)
offset = Vector2(62.725, 0)

[node name="FruitsLeftSymbol" type="Sprite2D" parent="."]
position = Vector2(-857, -430)
scale = Vector2(0.275, 0.275)
texture = ExtResource("3_t80w2")

[node name="FruitsLeftNumber" type="Label" parent="."]
offset_left = -1219.0
offset_top = -836.0
offset_right = -64.0
offset_bottom = -44.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.17, 0.163653, 0.1156, 1)
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("8_jjxhf")
theme_override_font_sizes/font_size = 191
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedBoostBar" parent="." instance=ExtResource("10_8hqpc")]
offset_left = -916.0
offset_top = 343.0
offset_right = -343.635
offset_bottom = 477.95
pivot_offset = Vector2(-28.5714, 60)

[node name="ActiveItemSlot1" type="Sprite2D" parent="."]
position = Vector2(-839.5, -117.5)
texture = ExtResource("6_8a2b0")
script = ExtResource("7_ecu0b")

[node name="HBoxContainer" type="HBoxContainer" parent="ActiveItemSlot1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -39.5
offset_right = -34.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ActiveItemSlot2" type="Sprite2D" parent="."]
position = Vector2(-610.5, -117.5)
texture = ExtResource("6_8a2b0")
script = ExtResource("7_ecu0b")

[node name="HBoxContainer" type="HBoxContainer" parent="ActiveItemSlot2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -39.5
offset_right = -34.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TimeMeter" parent="." instance=ExtResource("7_8a2b0")]
z_index = 1
position = Vector2(-438, -81)
scale = Vector2(0.422118, 0.46)

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_t2u7g")

[node name="EatFruitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_vx8ih")

[node name="LeftClickSymbol" type="Sprite2D" parent="."]
position = Vector2(-836, -279)
scale = Vector2(0.43, 0.416349)
texture = ExtResource("11_uqeto")

[node name="LeftClickSymbol2" type="Sprite2D" parent="."]
position = Vector2(-611, -279)
scale = Vector2(-0.43, 0.416)
texture = ExtResource("11_uqeto")

[node name="SpacebarSymbol" type="Sprite2D" parent="."]
position = Vector2(-833.317, 268)
scale = Vector2(0.213638, 0.213638)
texture = ExtResource("12_luomk")

[node name="ShiftSymbol" type="Sprite2D" parent="."]
position = Vector2(-602.317, 270)
scale = Vector2(0.204, 0.204)
texture = ExtResource("13_k8npl")

[node name="DashSymbol" type="Sprite2D" parent="."]
position = Vector2(-719.317, 264)
rotation = -0.232129
scale = Vector2(0.099, 0.099)
texture = ExtResource("14_am3y4")

[node name="WasdSymbol" type="Sprite2D" parent="."]
position = Vector2(-724.828, 103.172)
scale = Vector2(0.29831, 0.29831)
texture = ExtResource("15_l5n2q")

[node name="ArrowSymbol" type="Sprite2D" parent="."]
position = Vector2(-722.828, 15.1721)
scale = Vector2(0.0771242, 0.0771242)
texture = ExtResource("16_cv6tn")

[node name="ArrowSymbol2" type="Sprite2D" parent="."]
position = Vector2(-616.828, 129.172)
rotation = 1.57079
scale = Vector2(0.0771242, 0.0771242)
texture = ExtResource("16_cv6tn")

[node name="ArrowSymbol3" type="Sprite2D" parent="."]
position = Vector2(-832.828, 125.172)
rotation = 4.71238
scale = Vector2(0.0771242, 0.0771242)
texture = ExtResource("16_cv6tn")

[node name="ArrowSymbol4" type="Sprite2D" parent="."]
position = Vector2(-726.828, 173.172)
rotation = 3.14159
scale = Vector2(0.0771242, 0.0771242)
texture = ExtResource("16_cv6tn")
